close to first draft

--- a/pkg-vip.bib
+++ b/pkg-vip.bib
@@ -1,3 +1,30 @@
+@book{molnar-2019-iml,
+  title = {Interpretable Machine Learning},
+  author = {Christoph Molnar},
+  note = {\url{https://christophm.github.io/interpretable-ml-book/}},
+  year = {2019},
+  subtitle = {A Guide for Making Black Box Models Explainable}
+}
+
+@Manual{R6-pkg,
+  title = {R6: Encapsulated Classes with Reference Semantics},
+  author = {Winston Chang},
+  year = {2019},
+  note = {R package version 2.4.0},
+  url = {https://CRAN.R-project.org/package=R6},
+}
+  
+@Article{glmnet-pkg,
+  title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
+  author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+  journal = {Journal of Statistical Software},
+  year = {2010},
+  volume = {33},
+  number = {1},
+  pages = {1--22},
+  url = {http://www.jstatsoft.org/v33/i01/},
+}
+
 @book{chollet-deep-2018,
   author = {Chollet, Francois and Allaire, J. J.},
   title = {Deep Learning with R},
@@ -27,7 +54,14 @@
   publisher = {Springer New York}
 }
 
-
+@manual{DT-pkg,
+  title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
+  author = {Yihui Xie and Joe Cheng and Xianying Tan},
+  year = {2018},
+  note = {R package version 0.5},
+  url = {https://CRAN.R-project.org/package=DT},
+}
+  
 @book{pkg-ggplot2,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -61,7 +95,14 @@
   url = {http://papers.nips.cc/paper/5872-efficient-and-robust-automated-machine-learning.pdf}
 }
 
-
+@Manual{SuperLearner-pkg,
+  title = {SuperLearner: Super Learner Prediction},
+  author = {Eric Polley and Erin LeDell and Chris Kennedy and Mark {van der Laan}},
+  year = {2018},
+  note = {R package version 2.0-24},
+  url = {https://CRAN.R-project.org/package=SuperLearner},
+}
+  
 @manual{R,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -100,6 +141,12 @@
   year = {2018}
 }
 
+@article{fisher-model-2018,
+  title = {Model Class Reliance: Variable Importance Measures for any Machine Learning Model Class, from the "Rashomon" Perspective},
+  author = {Fisher, A., Rudin, C., and Dominici, F.},
+  journal = {arXiv preprint arXiv:1801.01489},
+  year = {2018}
+}
 
 @article{breiman-bagging-1996,
   author = {Breiman, Leo},
@@ -486,7 +533,18 @@ End of Semester Regression Project},
   url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion},
 }
 
-@Manual{pkg-vip,
+@Article{mlr-pkg,
+  title = {{mlr}: Machine Learning in R},
+  author = {Bernd Bischl and Michel Lang and Lars Kotthoff and Julia Schiffner and Jakob Richter and Erich Studerus and Giuseppe Casalicchio and Zachary M. Jones},
+  journal = {Journal of Machine Learning Research},
+  year = {2016},
+  volume = {17},
+  number = {170},
+  pages = {1--5},
+  url = {http://jmlr.org/papers/v17/15-066.html},
+}
+  
+@Manual{vip-pkg,
   title = {vip: Variable Importance Plots},
   author = {Brandon Greenwell and Brad Boehmke},
   year = {2018},
