--- a/RJwrapper.tex
+++ b/RJwrapper.tex
@@ -7,6 +7,9 @@
 
 %% load any required packages here
 \usepackage[normalem]{ulem}
+\usepackage{float}
+\newfloat{algorithm}{hbt}{lop}
+\floatname{algorithm}{Algorithm}
 
 \begin{document}
 
