--- a/pkg-vip.tex
+++ b/pkg-vip.tex
@@ -8,24 +8,6 @@
 In the era of "big data", it is becoming more of a challenge to not only build state-of-the-art predictive models, but also gain an understanding of what’s really going on in the data. For example, it is often of interest to know which, if any, of the predictors in a fitted model are relatively influential on the predicted outcome. Some modern algorithms—like random forests and gradient boosted decision trees—have a natural way of quantifying the importance or relative influence of each feature. Other algorithms—like naive Bayes classifiers and support vector machines—are not capable of doing so and model-agnostic approaches are generally used to measure each predictor’s importance. Enter \pkg{vip}, an R package for constructing variable importance scores/plots for many types of supervised learning algorithms using model-based and novel model-agnostic approaches. We'll also discuss a novel way to display both feature importance and feature effects together using sparklines.
 }
 
-\strong{TODO:}
-
-\begin{itemize}
-
-  \item Discuss strengths/weaknesses of different approaches.
-  \item Discuss how PDP and ICE curve info is stored as an attribute whenever \code{method = "pdp"} or \code{method = "ice"}, respectively.
-  \item Implement and discuss ratio approach in permutation-based VI scores in \pkg{vip}?
-  \item Should we discuss interaction detection? Probably...(the $H$-statistic example, if correct, is motivation enough).
-  \item \sout{Discuss other packages (like \pkg{DALEX} and \pkg{iml}).}
-  \item \sout{Need a good motivating example (e.g., airfoil example from arXiv paper using the \pkg{SuperLearner} package).}
-  \item \sout{Better discussion of function arguments, especially for permutation approach.}
-  \item \sout{Parallel examples for PDP-, ICE-, and permutation-based approaches.}
-  \item \sout{Example showing how to supply your own custom metric function.}
-  \item \sout{Add note about permuting features in the train vs. test/new data and a reference to the IML book chapter where this is discussed further.}
-  \item \sout{Discuss layout of the package (e.g., \code{vi()} vs. \code{vip()} and workhorse functions like \code{vi\_permute()}.}
-
-\end{itemize}
-
 
 % ------------------------------------------------------------------------------
 \section{Introduction}
@@ -33,7 +15,7 @@ In the era of "big data", it is becoming more of a challenge to not only build s
 
 Too often machine learning (ML) models are summarized using a single metric (e.g., cross-validated accuracy) and then put into production. Although we often care about the predictions from these models, it is becoming routine to also understand the predictions! Understanding how an ML model makes its predictions helps build trust in the model. Understanding ML models and their predictions is the fundamental idea of the emerging field of \dfn{interpretable machine learning} (IML). For an in-depth discussion on IML, see \citet{molnar-2019-iml}. In this paper, we focus on global methods for quantifying the importance of features in an ML model. Computing variable importance (VI) and communicating them through variable importance plots (VIPs) is a fundamental component of IML and is the main topic of this paper.
 
-VI scores and VIPs can be constructed for genberal ML models using a number of packages. The \CRANpkg{iml} package \citep{iml-pkg} provides the \code{FeatureImp()} function which computes feature importance for general prediction models using the permutation approach (discussed later). It is written in \CRANpkg{R6} \citep{R6-pkg} and allows the user to specify a generic loss function or select from a pre-defined list (e.g., \code{loss = "mse"} for mean squared error). It also allows the user to specify whether importance is measures ad the difference or as the ratio of the original model error and the model error after permutation. The user can also specify the number of repetitions used when permuting each feature to help stabilize the variability in the procedure.
+VI scores and VIPs can be constructed for general ML models using a number of packages. The \CRANpkg{iml} package \citep{iml-pkg} provides the \code{FeatureImp()} function which computes feature importance for general prediction models using the permutation approach (discussed later). It is written in \CRANpkg{R6} \citep{R6-pkg} and allows the user to specify a generic loss function or select from a pre-defined list (e.g., \code{loss = "mse"} for mean squared error). It also allows the user to specify whether importance is measures ad the difference or as the ratio of the original model error and the model error after permutation. The user can also specify the number of repetitions used when permuting each feature to help stabilize the variability in the procedure.
 
 The \CRANpkg{DALEX} package \citep{DALEX-pkg} also provides permutation-based variable importance scores through the \code{variable\_importance()} function. Similar to \code{iml::FeatureImp()}, this function allows the user to specify a loss function and how the importance scores are computed (e.g., using the difference or ratio). It also provides an option to sample the training data before shuffling the data to compute importance (the default is to use \code{n\_sample = 1000}. This can help speed up computation.
 
@@ -442,10 +424,64 @@ grid.arrange(p1, p2, ncol = 2)
   \label{fig:vip-ice-ppr-nn}
 \end{figure}
 
+When using \code{method = "pdp"} or \code{method = "ice"}, the feature effect values are stored as attributes \code{"pdp"} and \code{"ice"}, respectively. This is a convenience so that the feature effect plots can easily be reconstructed and compared with the variable importance scores, as demonstrated in the example below (see Figure~\ref{pdp-from-attr}):
+
+\begin{example}
+# Construct PDP-based variable importance scores
+vis <- vi(pp, method = "pdp")
+#> Warning message:
+#> Setting `method = "pdp"` is experimental, use at your own risk! 
+vis
+#> # A tibble: 10 x 2
+#>    Variable Importance
+#>    <chr>         <dbl>
+#>  1 x.4          2.93  
+#>  2 x.2          2.05  
+#>  3 x.1          2.04  
+#>  4 x.5          1.53  
+#>  5 x.3          1.38  
+#>  6 x.6          0.183 
+#>  7 x.10         0.139 
+#>  8 x.9          0.113 
+#>  9 x.8          0.0899
+#> 10 x.7          0.0558
+
+# Reconstruct PDPs for all 10 features
+par(mfrow = c(2, 5))
+for (name in paste0("x.", 1:10)) {
+  plot(attr(vis, which = "pdp")[[name]], type = "l", ylim = c(9, 19), las = 1)
+}
+\end{example}
+
+\begin{figure}[!htb]
+  \centering 
+  \includegraphics[width=1\linewidth]{figures/pdp-from-attr.pdf} 
+  \caption{PDPs for all ten features reconstructed from the \code{"pdp"} attribute of the \code{vis} object.}
+  \label{fig:pdp-from-attr}
+\end{figure}
 
 \subsection{Permutation method}
 
-The permutation method exists in various forms and was made popular in \citet{random-breiman-2001} for random forests and generalized and extended in \citet{fisher-model-2018}. The permutation approach used in \pkg{vip} is quite simple. The idea is that if we randomly permute these values of an important feature in the training data, the training performance would degrade (since permuting the values of a feature effectively destroys any relationship between that feature and the target variable). This of course assumes that the model has been properly tuned (e.g., using cross-validation) and is not over fitting. The permutation approach uses the difference between some baseline performance measure (e.g., training $R^2$, AUC, or RMSE) and the same performance measure obtained after permuting the values of a particular feature in the training data (\strong{Note:} the model is NOT refit to the training data after randomly permuting the values of a feature). It is also important to note that this method may not be appropriate when you havem, for example, highly correlated features (since permuting one feature at a time may lead to unlikely data instances). To use the permutation approach in \pkg{vip}, specify \code{method = "permute"} in the call to \code{vi()} or \code{vip()}. Note that using \code{method = "permute"} requires specifying a few additional arguments; see \code{?vi\_permute} for details.
+The permutation method exists in various forms and was made popular in \citet{random-breiman-2001} for random forests, before being generalized and extended in \citet{fisher-model-2018}. The permutation approach used in \pkg{vip} is quite simple and is outlined in Algorithm~\ref{alg:permute} below. The idea is that if we randomly permute these values of an important feature in the training data, the training performance would degrade (since permuting the values of a feature effectively destroys any relationship between that feature and the target variable). This of course assumes that the model has been properly tuned (e.g., using cross-validation) and is not over fitting. The permutation approach uses the difference between some baseline performance measure (e.g., training $R^2$, AUC, or RMSE) and the same performance measure obtained after permuting the values of a particular feature in the training data (\strong{Note:} the model is NOT refit to the training data after randomly permuting the values of a feature). It is also important to note that this method may not be appropriate when you have, for example, highly correlated features (since permuting one feature at a time may lead to unlikely data instances). 
+
+Let $X_1, X_2, \dots, X_j$ be the features of interest and let $\mathcal{M}_{orig}$ be the baseline performance metric; for brevity, we'll assume smaller is better (e.g., \dfn{mean absolute error} for regression). The permutation-based importance scores can be computed as follows:
+
+\begin{algorithm}
+\begin{enumerate}
+  \item For $i = 1, 2, \dots, j$:
+  \begin{enumerate}
+    \item Permute the values of feature $X_i$ in the training data.
+    \item Recompute the performance metric on the permuted data $\mathcal{M}_{perm}$.
+    \item Record the difference from baseline using $imp\left(X_i\right) = \mathcal{M}_{perm} - \mathcal{M}_{orig}$.
+  \end{enumerate}
+  \item Return the variable importance scores $imp\left(X_1\right), imp\left(X_2\right), \dots, imp\left(X_j\right)$.
+\end{enumerate}
+\caption{A simple algorithm for constructing permutation-based variable importance scores. \label{alg:permute}}
+\end{algorithm}
+
+Algorithm~\ref{alg:permute} can be improved or modified in a number of ways. For instance, the process can be repeated several times and the results averaged together. This helps to provide more stable variable importance measures, and also the opportunity measure their variability. Rather than taking the difference in step (c), \citet[sec 5.5.4]{molnar-2019-iml} argues that using the ratio $\mathcal{M}_{perm} / \mathcal{M}_{orig}$ makes the importance scores more comparable across different problems. It's also possible to assign importance scores to groups of features (e.g., by permuting more than one feature at a time); this would be useful if features can be categorized into mutually exclusive groups, for instance, categorical features that have been \dfn{one-hot-encoded}.
+
+To use the permutation approach in \pkg{vip}, specify \code{method = "permute"} in the call to \code{vi()} or \code{vip()}. Note that using \code{method = "permute"} requires specifying a few additional arguments; see \code{?vi\_permute} for details.
 
 An example is given below for the previously fitted PPR and NN models. The result, which are displayed in Figure~\ref{fig:vip-permute-ppr-nn}, agree with those obtained using the PDP- and ICE-based methods.
 
@@ -656,6 +692,17 @@ stopCluster(cl)
 
 % ------------------------------------------------------------------------------
 \section{Summary}
+% ------------------------------------------------------------------------------
+
+VIPs help to visualize the strength of the relationship between each feature and the response, while accounting for all the other features in the model. We've discussed two types of variable importance: model-specific and model-agnostic, as well as some of their strengths and weaknesses. In this paper, we showed how
+to construct VIPs for various types of black box models in R using the \pkg{vip} package. We also briefly
+discussed related approaches available in other R packages. Suggestions to avoid
+high execution times were discussed and demonstrated via examples. This paper is based on \pkg{vip} version 0.2.0. For updates that have occurred since then, see the package’s \href{https://cran.r-project.org/web/packages/vip/news/news.html}{NEWS file}. In terms of future development, \pkg{vip} can be expanded in a number of ways. For
+example, we plan to allow group-based permutation scores in the near future. Although not discussed in this paper, the package also includes a promising statistic (similar to the PDP- and ICE-based variable importance scores previously discussed) for measuring the relative strength of interaction between features. 
+
+
+% ------------------------------------------------------------------------------
+\section{Acknowledgments}
 % ------------------------------------------------------------------------------
 
 TBD.
